# todo

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.claude/skills/: todo-add.md  todo-clear.md  todo-delete.md  todo-done.md  todo-edit.md  todo-list.md
.claude/skills/managing-todos/: SKILL.md
.claude/skills/managing-todos/scripts/: setup.sh
todo/: cli.py  db.py  formatting.py  models.py
todo/migrations/: 001_initial.sql  002_add_priority_due_updated.sql  003_add_tags.sql  004_add_attachments.sql  005_add_namespaces.sql  006_rename_description_add_meta.sql
