[project]
name = "todo"
version = "0.1.0"
description = "A simple CLI todo list application using SQLite"
requires-python = ">=3.10"
dependencies = ["rich>=13.0"]

[project.scripts]
todo = "todo.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
